# pre-commit-poetry

./: .coveragerc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  pyproject.toml
src/pre_commit_poetry/: app.py
tests/: test_app.py
