[tool.poetry]
name = "pre-commit-poetry"
version = "0.0.3"
description = "Description"
authors = ["Daniel Sullivan <mumblepins@users.noreply.github.com>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/mumblepins/pre-commit-poetry/"
documentation = "https://mumblepins.github.io/pre-commit-poetry/"
readme = "README.md"
packages = [{ include = "pre_commit_poetry", from = "src" }]

[tool.poetry.scripts]
pre-commit-poetry = 'pre_commit_poetry.app:main'

[tool.poetry.dependencies]
python = "^3.7"
poetry = { version = ">=1.2.0a5,<2", allow-prereleases = true }
toml = "^0.10.2"
pyyaml = { version = "*", optional = true, allow-prereleases = true }

[tool.poetry.extras]
test-extra = ["pyyaml"]

[tool.poetry.group.dev.dependencies]
pylint = "^2.13.9"
pytest = "^7.1.1"
coverage = "^6.3.2"
pre-commit = "^2.15.0"
Sphinx = "^4.4"
sphinx-rtd-theme = "^1.0"
mypy = "^0.942"
pytest-cov = "^3.0.0"
pylint-pytest = "^1.1.2"
types-toml = "^0.10.4"


[build-system]
requires = ["poetry-core>=1.1.0a7"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88
indent = "    "
multi_line_output = 3
default_section = "FIRSTPARTY"
skip = "env"
include_trailing_comma = true
combine_as_imports = true
force_grid_wrap = 0

[tool.black]
line-length = 160
include = '\.pyi?$'
target-version = ['py39']
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.cache
  | env
  | venv
  | \.aws-sam
  | _build
  | buck-out
  | build
  | dist
)/
'''



[tool.mypy]
files = 'src/**/*.py'
exclude = '''(?x)(
      \.eggs
    | \.git          # root of the project
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.cache
  | env
  | venv
  | \.aws-sam
  | _build
  | buck-out
  | build
  | dist
  | package_
)'''


[[tool.mypy.overrides]]
module = "cleo.io.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "poetry.console.*"
ignore_missing_imports = true
